--- a/index.htm
+++ b/index.htm
@@ -8,32 +8,32 @@
       <table class="tabla" border="1">
 
         <tr>
-        <label for="producto1">Producto 1:</label>
+        <td>"producto1"Producto 1:</td>
         <input type="text" name="producto1" id="producto1">
         </tr>
             <br><br>
            <tr>
-        <label for="precio1">Precio 1:</label>
+        <td>"precio1" Precio 1:</td>
         <input type="text" name="precio1" id="precio1">
            </tr>
           <br><br>
         <tr>
-        <label for="producto2">Producto 2:</label>
+        <td>"producto2" Producto 2:</td>
         <input type="text" name="producto2" id="producto2">
         </tr>
           <br><br>
           <tr>
-        <label for="precio2">Precio 2:</label>
+        <td>"precio2" Precio 2:</td>
         <input type="text" name="precio2" id="precio2">
           </tr>
           <br><br>
         <tr>
-        <label for="producto3">Producto 3:</label>
+        <td>"producto3" Producto 3:</td>
         <input type="text" name="producto3" id="producto3">
         </tr>
           <br><br>
           <tr>
-        <label for="precio3">Precio 3:</label>
+        <td>"precio3"Precio 3:</td>
         <input type="text" name="precio3" id="precio3">
           </tr>
           <br><br>
