--- a/index.htm
+++ b/index.htm
@@ -8,32 +8,32 @@
       <table class="tabla" border="1">
 
         <tr>
-        <td>"producto1"Producto 1:</td>
+        <td>producto 1</td>
         <input type="text" name="producto1" id="producto1">
         </tr>
             <br><br>
            <tr>
-        <td>"precio1" Precio 1:</td>
+        <td>precio1</td>
         <input type="text" name="precio1" id="precio1">
            </tr>
           <br><br>
         <tr>
-        <td>"producto2" Producto 2:</td>
+        <td>producto2</td>
         <input type="text" name="producto2" id="producto2">
         </tr>
           <br><br>
           <tr>
-        <td>"precio2" Precio 2:</td>
+        <td>precio2 </td>
         <input type="text" name="precio2" id="precio2">
           </tr>
           <br><br>
         <tr>
-        <td>"producto3" Producto 3:</td>
+        <td>producto3</td>
         <input type="text" name="producto3" id="producto3">
         </tr>
           <br><br>
           <tr>
-        <td>"precio3"Precio 3:</td>
+        <td>precio3</td>
         <input type="text" name="precio3" id="precio3">
           </tr>
           <br><br>
