--- a/index.htm
+++ b/index.htm
@@ -37,8 +37,9 @@
         <input type="text" name="precio3" id="precio3">
           </tr>
           <br>
-        
-        <input type="submit" value="Enviar">
+        <tr>
+      <td>  <input type="submit" value="Enviar"> </td>
+        </tr>
       </table>
     </form>
 </body>
