--- a/index.htm
+++ b/index.htm
@@ -9,32 +9,32 @@
 
         <tr>
         <td>producto 1</td>
-        <input type="text" name="producto1" id="producto1">
+        <td></td><input type="text" name="producto1" id="producto1"></td>
         </tr>
             <br>
            <tr>
         <td>precio1</td>
-        <input type="text" name="precio1" id="precio1">
+       <td> <input type="text" name="precio1" id="precio1"></td>
            </tr>
           <br>
         <tr>
         <td>producto2</td>
-        <input type="text" name="producto2" id="producto2">
+     <td>  <input type="text" name="producto2" id="producto2"></td>
         </tr>
           <br>
           <tr>
         <td>precio2 </td>
-        <input type="text" name="precio2" id="precio2">
+     <td>  <input type="text" name="precio2" id="precio2"></td>
           </tr>
           <br>
         <tr>
         <td>producto3</td>
-        <input type="text" name="producto3" id="producto3">
+       <td> <input type="text" name="producto3" id="producto3"></td>
         </tr>
           <br>
           <tr>
         <td>precio3</td>
-        <input type="text" name="precio3" id="precio3">
+     <td>   <input type="text" name="precio3" id="precio3"> </td>
           </tr>
           <br>
         <tr>
