--- a/index.htm
+++ b/index.htm
@@ -9,7 +9,7 @@
 
         <tr>
         <td>producto 1</td>
-        <td></td><input type="text" name="producto1" id="producto1"></td>
+        <td><input type="text" name="producto1" id="producto1"></td>
         </tr>
             <br>
            <tr>
